--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+/* html,
 body,
 :root {
   height: 100%;
-}
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+  background-color: #f7f7f7;
+} */
